# CV-API

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: develop.yaml  master-deploy.yaml
app/: main.py
app/core/: database.py  dependencies.py  exceptions.py  security.py  settings.py
app/models/: __init__.py  api_models.py  base_model.py  models_enums.py
app/repository/: base_repository.py  skill_repository.py  user_repository.py  user_skill_repository.py
app/routes/v1/: __init__.py  auth_routes.py  ping_route.py  skill_routes.py  user_skills_route.py  users_routes.py
app/schemas/: auth_schema.py  base_schema.py  skill_schema.py  user_schema.py  user_skills_schema.py
app/services/: auth_service.py  base_service.py  skill_service.py  user_service.py  user_skill_service.py
migrations/: env.py
migrations/versions/: 05497f27f606_create_users_table.py  07d172f853ab_adding_skills_relashioship_to_users_.py  24e511e38689_adding_unique_copnmstraint_to_users_and_.py  321d66d4fe5b_adding_unique_constraint_to_skill_name_.py  99aed21514cf_adding_skills_relashioship_to_users.py  a297652566ae_adding_role_attr_to_users_models_and_.py  df71e20aae5e_adding_user_model.py  ee97a709b9a8_adding_new_attrs_for_user_model.py
tests/: conftest.py  factories.py  helpers.py  schemas.py  test_conftest.py  test_fixtures.py
tests/core/: test_security.py
tests/db/: test_db.py
tests/repository/: test_base_reposiory.py
tests/routes/v1/: base_route_test.py  test_auth_route.py  test_ping_route.py  test_skill_route.py  test_user_route.py  test_user_skill_route.py
